--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "evan-li/think-sms",
-    "description": "think blade view engine",
+    "description": "think sms sender",
     "license": "Apache2",
     "authors": [
     ],
