--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "autoload": {
         "psr-4": {
             "evan\\think\\sms\\": "src"
-        }
+        },
+        "files": [
+            "src/helper.php"
+        ]
     }
 }
